@@ -253,14 +253,16 @@ public class OnionServiceController {
 
 
     private String readHostnameFile(int port) {
-String hiddenServiceDir = System.getProperty("user.dir") + "/onion/hiddenServiceDirs/onion-service-" + port;
-        String hostnameFilePath = hiddenServiceDir + "/hostname";
-        Path path = Paths.get(hostnameFilePath);
+        // Get the current working directory
+        String currentDirectory = System.getProperty("user.dir");
+
+        // Build the correct path to the hostname file
+        Path path = Paths.get(currentDirectory, "onion", "hiddenServiceDirs", "onion-service-" + port, "hostname");
+        System.out.println(path);
         try {
-            return Files.readString(path);
+            return new String(Files.readAllBytes(path));
         } catch (IOException e) {
-            logger.error("Error reading hostname file: {}", hostnameFilePath, e);
-            return "Error reading hostname file: " + hostnameFilePath;
+            return "Unable to read hostname file";
         }
     }
 
